Socialized website : Confidentiality policy, Follow on Fb, GitHub, link to our website agriculturefamiliale.com

--- a/src/AppBundle/Resources/views/Base.html.twig
+++ b/src/AppBundle/Resources/views/Base.html.twig
@@ -8,12 +8,12 @@
 
     {% block stylesheets %}
         {% stylesheets output="css/compiled/base.css" filter="cssrewrite"
-        'bundles/appbundle/css/bootstrap.min.css'
-        'bundles/appbundle/font-awesome/css/font-awesome.css'
-        'bundles/appbundle/css/inspinia.css'
-        'bundles/appbundle/css/animate.css'
-        'bundles/appbundle/css/plugins/toastr/toastr.min.css'
-        'bundles/appbundle/css/agroscopic.css'
+        'bundles/app/css/bootstrap.min.css'
+        'bundles/app/font-awesome/css/font-awesome.css'
+        'bundles/app/css/inspinia.css'
+        'bundles/app/css/animate.css'
+        'bundles/app/css/plugins/toastr/toastr.min.css'
+        'bundles/app/css/agroscopic.css'
         %}
         <link rel="stylesheet" href="{{ asset_url }}" />
         {% endstylesheets %}
