--- a/src/AppBundle/Resources/views/Commons/nav-side.html.twig
+++ b/src/AppBundle/Resources/views/Commons/nav-side.html.twig
@@ -31,8 +31,13 @@
     </li>
 {% endif %}
 
-<div class="nav-label" style="padding-top:20px;padding-left:15px;padding-right:15px;font-size:0.8em;text-align: center;color:lightgrey;">
-    <a style="color:white;opacity: 0.4;margin:5px;" href="#">À propos</a>
-    <a style="color:white;opacity: 0.4;margin:5px;" href="#">Partenaires</a><br/>
-    <a style="color:white;opacity: 0.4;margin:5px;" href="#">Politique de confidentialité</a>
+<div class="nav-label" style="padding-top:20px;font-size:0.8em;padding-left:15px;padding-right:15px;text-align: center;color:lightgrey;">
+    <a style="color:white;opacity: 0.4;margin:5px;" href="http://agriculturefamiliale.com/lassociation/">A propos</a><br/>
+    <a style="color:white;opacity: 0.4;margin:5px;" href="{{path('confidentiality_policy')}}">Politique de confidentialité</a>
 </div>
+    <div class="nav-label" style="padding-top:20px;font-size:1.5em;padding-left:15px;padding-right:15px;text-align: center;color:lightgrey;">
+
+    <a style="color:white;opacity: 0.4;margin:5px;" href="https://www.facebook.com/pages/Agro-et-Sac-à-Dos/708939189225506"><i class="fa fa-facebook-official"></i></a>
+    <a style="color:white;opacity: 0.4;margin:5px;" href="https://github.com/Agroscopic/agricultures-du-monde"><i class="fa fa-github"></i></a>
+
+    </div>
