--- a/src/AppBundle/Resources/views/ExceptionsLayout.html.twig
+++ b/src/AppBundle/Resources/views/ExceptionsLayout.html.twig
@@ -3,24 +3,34 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Agricultures du Monde | {% block titre %}{% endblock %}</title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href="http://webapplayers.com/inspinia_admin-v2.0/css/style.css" rel="stylesheet">
-    <link href="http://webapplayers.com/inspinia_admin-v2.0/css/animate.css" rel="stylesheet">
+    <title>Agricultures du Monde | {% block titre %}Erreur{% endblock %}</title>
+
+    {% block stylesheets %}
+        {% stylesheets output="assets/css/compiled/exceptions.css" filter="cssrewrite"
+        'bundles/app/css/bootstrap.min.css'
+        'bundles/app/font-awesome/css/font-awesome.css'
+        'bundles/app/css/inspinia.css'
+        'bundles/app/css/animate.css'
+        'bundles/app/css/agroscopic.css'
+        %}
+        <link rel="stylesheet" href="{{ asset_url }}" />
+        {% endstylesheets %}
+    {% endblock %}
 </head>
+
 <body class="gray-bg">
-<div class="middle-box text-center animated fadeInDown">
-    <h1>{% block numeroError %} 404 {% endblock %}</h1>
+    <div class="middle-box text-center animated fadeInDown">
+        <h1>{% block numeroError %} 404 {% endblock %}</h1>
 
-    <h3 class="font-bold">{% block titleError %} Page introuvable {% endblock %}</h3>
+        <h3 class="font-bold">{% block titleError %} Page introuvable {% endblock %}</h3>
 
-    <div class="error-desc">
-        {% block descError %} Désolé, mais la page que vous cherchez est introuvable. Essayez de vérifier l'URL, puis cliquez sur le bouton d'actualisation de votre navigateur. Le site est encore en cours de construction, ceci est peut-être dû à une erreur. {% endblock %}
-        <br/><a class="btn btn-primary" href="{{ path('adm_core_home') }}" role="button">Accueil</a>
+        <div class="error-desc">
+            {% block descError %} Désolé, mais la page que vous cherchez est introuvable. Essayez de vérifier l'URL, puis cliquez sur le bouton d'actualisation de votre navigateur. Le site est encore en cours de construction, ceci est peut-être dû à une erreur. {% endblock %}
+            <br/><br/><a class="btn btn-primary" href="{{ path('adm_core_home') }}" role="button">Accueil</a>
+        </div>
     </div>
-</div>
-<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+
+    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 </body>
 </html>
