Users : Login and Register template done
Overriding default templates in
app/resources/ApplicationSonataUserBundle/views

--- a/app/Resources/ApplicationSonataUserBundle/views/ChangePassword/changePassword.html.twig
+++ b/app/Resources/ApplicationSonataUserBundle/views/ChangePassword/changePassword.html.twig
@@ -1,5 +1,5 @@
 {% extends "FOSUserBundle::layout_simple.html.twig" %}
 
 {% block pagecontent %}
-{% include "FOSUserBundle:Registration:register_content.html.twig" %}
+{% include "SonataUserBundle:ChangePassword:changePassword_content.html.twig" %}
 {% endblock pagecontent %}
