--- a/app/Resources/ApplicationSonataUserBundle/views/Security/login.html.twig
+++ b/app/Resources/ApplicationSonataUserBundle/views/Security/login.html.twig
@@ -1,83 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <title>Atlas des Agricultures du Monde | Connexion</title>
-
-    {% block stylesheets %}
-        {% stylesheets output="assets/css/compiled/login.css" filter="cssrewrite"
-        'bundles/app/css/bootstrap.min.css'
-        'bundles/app/font-awesome/css/font-awesome.css'
-        'bundles/app/css/inspinia.css'
-        'bundles/app/css/animate.css'
-        'bundles/app/css/agroscopic.css'
-        %}
-        <link rel="stylesheet" href="{{ asset_url }}" />
-        {% endstylesheets %}
-    {% endblock %}
-</head>
-
-<body class="gray-bg">
-{% if error %}
-    <div class="alert alert-danger alert-error">{{ error|trans({}, 'FOSUserBundle') }}</div>
-{% endif %}
-
-<div class="loginColumns animated fadeInDown">
-    <div class="row">
-
-        <div class="col-md-6">
-            <h2 class="font-bold">Atlas des Agricultures du Monde</h2>
-
-            <p>
-                Créez vous un compte et connectez vous dès maintenant afin de suivre les avancées du projet.
-            </p>
-
-        </div>
-        <div class="col-md-6">
-            <div class="ibox-content">
-                <form action="{{ path("fos_user_security_check") }}" method="post" role="form" class="m-t">
-                    <input type="hidden" name="_csrf_token" value="{{ csrf_token }}"/>
-                    <div class="form-group">
-                        <input type="text" class="form-control" placeholder="{{ 'security.login.username'|trans({}, 'FOSUserBundle') }}" name="_username" value="{{ last_username }}"
-                               required="required">
-                    </div>
-
-                    <div class="form-group">
-                        <input type="password" class="form-control" placeholder="{{ 'security.login.password'|trans({}, 'FOSUserBundle') }}" name="_password" required="required">
-                    </div>
-                    <div class="form-group">
-                        <input type="checkbox" id="remember_me" name="_remember_me" value="on"/>
-                        {{ 'security.login.remember_me'|trans({}, 'FOSUserBundle') }}
-                    </div>
-
-                    <input type="submit" id="_submit" name="_submit" class="btn btn-primary block full-width m-b"
-                           value="{{ 'security.login.submit'|trans({}, 'FOSUserBundle') }}"/>
-                    <div class="form-group">
-                        <a href="{{ path('fos_user_resetting_request') }}"><small>Mot de passe oublié ?</small></a>
-                    </div>
-                    <a class="btn btn-white block full-width m-b" href="{{ path("fos_user_registration_register") }}">Créer un compte</a>
-                </form>
-            </div>
-        </div>
-    </div>
-    <hr/>
-
-</div>
-
-{% block javascripts %}
-    {% javascripts
-    '@AppBundle/Resources/public/js/jquery-2.1.1.js'
-    '@AppBundle/Resources/public/js/bootstrap.min.js'
-    '@AppBundle/Resources/public/js/inspinia.js'
-    '@AppBundle/Resources/public/js/plugins/jquery-ui/jquery-ui.min.js'
-    output='assets/js/compiled/login.js'
-    %}
-    <script type="text/javascript" src="{{ asset_url }}"></script>
-    {% endjavascripts %}
-{% endblock %}
-</body>
-</html>
-
+{% extends "SonataUserBundle:Security:base_login.html.twig" %}
