--- a/src/AppBundle/Resources/views/NoTopNavLayout.html.twig
+++ b/src/AppBundle/Resources/views/NoTopNavLayout.html.twig
@@ -115,7 +115,7 @@
             '@AppBundle/Resources/public/js/plugins/toastr/toastr.min.js'
             '@AppBundle/Resources/public/js/plugins/slimscroll/jquery.slimscroll.min.js'
             '@AppBundle/Resources/public/js/plugins/jquery-ui/jquery-ui.min.js'
-            output='assets/js/compiled/base.js'
+            output='assets/js/compiled/notopnavlayout.js'
             %}
             <script type="text/javascript" src="{{ asset_url }}"></script>
             {% endjavascripts %}
