--- a/app/Resources/ApplicationSonataUserBundle/views/Profile/edit_authentication.html.twig
+++ b/app/Resources/ApplicationSonataUserBundle/views/Profile/edit_authentication.html.twig
@@ -1,32 +1,14 @@
-{#
+{% extends "AppBundle::Base.html.twig" %}
+{% block dashboardheader %}
+{% endblock %}
 
-This file is part of the Sonata package.
+{% block pageheading %}
+{% endblock %}
 
-(c) Thomas Rabaix <thomas.rabaix@sonata-project.org>
+{% block pagecontent %}
 
-For the full copyright and license information, please view the LICENSE
-file that was distributed with this source code.
-
-#}
-
-{% sonata_template_box 'This is the user authentication edition template. Feel free to override it.' %}
-
-<div class="row">
-    <div class="span6 col-lg-6">
-        <div class="panel panel-warning">
-            <div class="panel-heading">
-                <h3 class="panel-title">{{ 'title_user_edit_authentication'|trans({}, 'SonataUserBundle') }}</h3>
-            </div>
-            <div class="panel-body">
-                <form action="{{ path('sonata_user_profile_edit_authentication') }}" method="POST" class="form-horizontal">
-                    {{ form_widget(form) }}
-
-                    <button type="submit" name="submit" class="btn btn-primary pull-right">{{ 'sonata_user_submit'|trans({}, 'SonataUserBundle') }}</button>
-                </form>
-            </div>
-        </div>
-    </div>
-    <div class="span6 col-lg-6">
+<div class="row" style="margin-top: 5%">
+    <div class="col-lg-offset-3 col-lg-6">
         <div class="panel panel-danger">
             <div class="panel-heading">
                 <h3 class="panel-title">{{ 'sonata_change_password_link'|trans({}, 'SonataUserBundle') }}</h3>
@@ -37,3 +19,4 @@ file that was distributed with this source code.
         </div>
     </div>
 </div>
+{% endblock %}
