--- a/app/Resources/ApplicationSonataUserBundle/views/Registration/register_content.html.twig
+++ b/app/Resources/ApplicationSonataUserBundle/views/Registration/register_content.html.twig
@@ -8,27 +8,26 @@
             </h5>
         </div>
     <div class="ibox-content">
-        <form action="{{ path('fos_user_registration_register') }}" {{ form_enctype(form) }} method="POST" class="m-t" role="form">
+            {{ form_start(form,{'attr': {'class': 'm-t'}}) }}
+            {{ form_errors(form) }}
             <div class="form-group">
-                <input type="text" class="form-control" id="fos_user_registration_register_username" placeholder="{{ 'form.username'|trans({}, 'FOSUserBundle') }}" required="required"/>
-            </div>
-            <div class="form-group">
-                <input type="email" class="form-control" id="fos_user_registration_register_email" placeholder="{{ 'form.email'|trans({}, 'FOSUserBundle') }}" required="required"/>
-            </div>
-
-            <div class="form-group">
-                <input type="password" class="form-control" id="fos_user_registration_form_plainPassword_first" placeholder="{{ 'form.password'|trans({}, 'FOSUserBundle') }}" required="required"/>
+               {{ form_label(form.username) }}
+                {{ form_widget(form.username,{'attr': {'class': 'form-control','type':'text'}}) }}
+                {{ form_errors(form.username) }}
             </div>
 
             <div class="form-group">
-                <input type="password" class="form-control" id="fos_user_registration_form_plainPassword_second" placeholder="{{ 'form.password_confirmation'|trans({}, 'FOSUserBundle') }}" required="required"/>
+                {{ form_label(form.email) }}
+                {{ form_widget(form.email,{'attr': {'class': 'form-control','type':'email'}}) }}
+                {{ form_errors(form.email) }}
             </div>
 
-            <div class="form-actions form-group">
+            {{ form_widget(form.plainPassword) }}
+<br/>
+            <div class="form-actions">
                 <input type="submit" value="{{ 'registration.submit'|trans({}, 'FOSUserBundle') }}" class="btn btn-warning block full-width m-b" />
             </div>
-
-        </form>
+            {{ form_end(form) }}
         </div>
     </div>
 </div>
