Security : Fixed security problems

--- a/src/AppBundle/Resources/views/Reports/read.html.twig
+++ b/src/AppBundle/Resources/views/Reports/read.html.twig
@@ -309,7 +309,7 @@
             var prevH1List = null;
 
             var index = 0;
-            $("#articleBody > div > h1, #articleBody > div > h2").each(function () {
+            $("#articleBody > h1, #articleBody > h2").each(function () {
 
                 //insert an anchor to jump to, from the TOC link.
                 var anchor = "<div id='" + "toc" + index + "'></div>";
