--- a/src/AppBundle/Resources/views/Commons/nav-side.html.twig
+++ b/src/AppBundle/Resources/views/Commons/nav-side.html.twig
@@ -5,8 +5,7 @@
     <a href="#"><i class="fa fa-th-large"></i> <span class="nav-label">EXPLORER</span> <span
                 class="fa arrow"></span></a>
     <ul class="nav nav-second-level">
-        <li><a href={# path('app_reports_listAll') #}>Etudes</a></li>
-        <li><a href={# path('app_maps_listAll') #}>Carte mondiale</a></li>
+        <li><a href={{ path('app_view_worldmap') }}>Carte mondiale</a></li>
     </ul>
 </li>
 
