--- a/src/AppBundle/Resources/views/NoTopNavLayout.html.twig
+++ b/src/AppBundle/Resources/views/NoTopNavLayout.html.twig
@@ -32,10 +32,58 @@
                     <ul class="nav">
                         {% include 'AppBundle:Commons:nav-header.html.twig' %}
                     </ul>
-                        <ul class="nav" id="side-menu">
+                    <ul class="nav" id="side-menu">
+
+                        <li>
+                            <a href="{{ path('homepage') }}"><i class="fa fa-home"></i> <span class="nav-label">ACCUEIL</span></a>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fa fa-th-large"></i> <span class="nav-label">EXPLORER</span> <span
+                                        class="fa arrow"></span></a>
+                            <ul class="nav nav-second-level">
+                                <li><a href={# path('app_maps_listAll') #}>Carte mondiale</a></li>
+
+                            </ul>
+
+                        </li>
                         {% block menus %}
-                            {% include 'AppBundle:Commons:nav-side.html.twig' %}
+
                         {% endblock %}
+
+
+                        {% if not is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+                            <hr class="nav-label" style="width: 80%;margin-left: auto;margin-right: auto; margin-top:5px;margin-bottom:15px;color:white;opacity: 0.3">
+                            <li id="connexion" class="nav-label" style="height: 70%; border-radius: 3px;">
+                                <a href="{{ path('fos_user_security_login') }}" style="padding-top: 7px;padding-bottom: 7px; padding-left: 10px;padding-right:10px; "><span class="nav-label" style="color:white;">Connexion</span></a>
+                            </li>
+                        {% else %}
+                            <hr style="width: 80%;margin-left: auto;margin-right: auto; margin-top:5px;margin-bottom:15px;color:white;opacity: 0.3">
+                            <li style="padding: 10px;line-height:1em;">
+
+                                <img alt="image"
+                                     style="-webkit-border-radius: 50em;-moz-border-radius: 50em;border-radius: 50em; height: 2.5em;width:2.5em; margin-left:5px;margin-top: -5px;"
+                                     src="http://webapplayers.com/inspinia_admin-v2.0/img/profile_small.jpg"/>
+        <span class="nav-label" style="color:white;margin-left: 10px;font-weight: 600;"> {{ app.user.username | capitalize }}
+            <a href="{{ path('fos_user_profile_show') }}">
+                <i class="fa fa-cog fa-lg menu-icon" style="position:absolute;right:10px;color:#948B96;top:15px;"></i>
+            </a>
+        </span>
+
+                            </li>
+                        {% endif %}
+
+                        <div class="nav-label" style="padding-top:20px;font-size:0.8em;padding-left:15px;padding-right:15px;text-align: center;color:lightgrey;">
+                            <a style="color:white;opacity: 0.4;margin:5px;" href="http://agriculturefamiliale.com/lassociation/">A propos</a><br/>
+                            <a style="color:white;opacity: 0.4;margin:5px;" href="{{path('confidentiality_policy')}}">Politique de confidentialité</a>
+                        </div>
+                        <div class="nav-label" style="padding-top:20px;font-size:1.5em;padding-left:15px;padding-right:15px;text-align: center;color:lightgrey;">
+
+                            <a style="color:white;opacity: 0.4;margin:5px;" href="https://www.facebook.com/pages/Agro-et-Sac-à-Dos/708939189225506"><i class="fa fa-facebook-official"></i></a>
+                            <a style="color:white;opacity: 0.4;margin:5px;" href="https://github.com/Agroscopic/agricultures-du-monde"><i class="fa fa-github"></i></a>
+
+                        </div>
+
+
                     </ul>
                 </div>
             </nav>
