--- a/src/AppBundle/Resources/views/OffCanvasLayout.html.twig
+++ b/src/AppBundle/Resources/views/OffCanvasLayout.html.twig
@@ -1,5 +1,5 @@
 {# OffCanvas Layout | http://webapplayers.com/inspinia_admin-v2.1/off_canvas_menu.html #}
-{% extends "AppBundle::Base.html.twig" %}
+{% extends "AppBundle::NoTopNavLayout.html.twig" %}
 
 {% block title %}
     Off Canvas Layout
@@ -54,7 +54,6 @@
     <div id="page-heading" class="row wrapper border-bottom white-bg page-heading">
         <div class="col-lg-10">
             {% block breadcrumb %}
-                <h2>Diagnostic Agraire</h2>
                 <ol class="breadcrumb">
                     <li>
                         <a href="#">Accueil</a>
@@ -63,7 +62,7 @@
                         <a href="#">Rapports</a>
                     </li>
                     <li class="active">
-                        <strong>Diagnostic Agraire</strong>
+                        <strong>Lire</strong>
                     </li>
                 </ol>
             {% endblock %}
