--- a/app/Resources/ApplicationSonataUserBundle/views/Registration/register_content.html.twig
+++ b/app/Resources/ApplicationSonataUserBundle/views/Registration/register_content.html.twig
@@ -1,7 +1,7 @@
 {% extends "SonataUserBundle::layout_simple.html.twig" %}
 
 {% block pagecontent %}
-<div class="col-lg-3 ">
+<div class="col-lg-4 col-lg-offset-4">
     <div class="ibox float-e-margins">
         <div class="ibox-title">
             <h5>{{ 'title_user_registration'|trans({}, 'SonataUserBundle') }}
