--- a/src/AppBundle/Resources/views/Base.html.twig
+++ b/src/AppBundle/Resources/views/Base.html.twig
@@ -56,12 +56,18 @@
                     <a href="#"><i class="fa fa-th-large"></i> <span class="nav-label">EXPLORER</span> <span
                                 class="fa arrow"></span></a>
                     <ul class="nav nav-second-level">
-                        <li><a href={# path('app_reports_listAll') #}>Etudes</a></li>
-                        <li><a href={# path('app_maps_listAll') #}>Carte mondiale</a></li>
+                        <li><a href={{ path('app_view_worldmap') }}>Carte mondiale</a></li>
 
                     </ul>
 
                 </li>
+                {% if is_granted("ROLE_EDITOR") %}
+
+                <li>
+                    <a href="{{ path('admin_app_report_create') }}"><i class="fa fa-pencil"></i> <span class="nav-label">AJOUTER ETUDE</span></a>
+                </li>
+                {% endif %}
+
                 {% block menus %}
 
                 {% endblock %}
