--- a/app/Resources/ApplicationSonataUserBundle/views/Registration/register_content.html.twig
+++ b/app/Resources/ApplicationSonataUserBundle/views/Registration/register_content.html.twig
@@ -1,7 +1,11 @@
 {% extends "SonataUserBundle::layout_simple.html.twig" %}
-
+{% block title %}{{ 'title_user_registration'|trans({}, 'SonataUserBundle') }}
+{% endblock title %}
 {% block pagecontent %}
-<div class="col-lg-3 ">
+    <h2 style="text-align: center;margin-top: 5%">Atlas des Agricultures du Monde</h2>
+    <hr/>
+    <div class="row">
+<div class="col-lg-4 col-lg-offset-4 ">
     <div class="ibox float-e-margins">
         <div class="ibox-title">
             <h5>{{ 'title_user_registration'|trans({}, 'SonataUserBundle') }}
