--- a/app/Resources/ApplicationSonataUserBundle/views/Registration/register_content.html.twig
+++ b/app/Resources/ApplicationSonataUserBundle/views/Registration/register_content.html.twig
@@ -31,6 +31,9 @@
             <div class="form-actions">
                 <input type="submit" value="{{ 'registration.submit'|trans({}, 'FOSUserBundle') }}" class="btn btn-warning block full-width m-b" />
             </div>
+        <div class="form-group control-group" style="text-align: right;">
+            <a href="{{ path('fos_user_security_login') }}">J'ai déjà un compte</a>
+        </div>
             {{ form_end(form) }}
         </div>
     </div>
