--- a/app/Resources/ApplicationSonataUserBundle/views/Security/base_login.html.twig
+++ b/app/Resources/ApplicationSonataUserBundle/views/Security/base_login.html.twig
@@ -26,6 +26,9 @@
                             <label for="password">{{ 'security.login.password'|trans({}, 'FOSUserBundle') }}</label>
                             <input type="password" class="form-control" id="password" name="_password" required="required"/>
                         </div>
+                     <div class="form-group control-group" style="text-align: right; margin-top: -20px;margin-bottom: 5px;">
+                         <a href="{{ path('fos_user_resetting_request') }}">{{ 'forgotten_password'|trans({}, 'SonataUserBundle') }}</a>
+                     </div>
 
                         <div class="form-group" style="text-align: left;">
 
@@ -42,10 +45,8 @@
                                 <input type="submit" id="_submit" name="_submit" class="btn btn-primary block full-width m-b"
                                        value="{{ 'security.login.submit'|trans({}, 'FOSUserBundle') }}"/>
                         </div>
-                         <div class="form-group control-group" style="text-align: right;">
-                                <a href="{{ path('fos_user_resetting_request') }}">{{ 'forgotten_password'|trans({}, 'SonataUserBundle') }}</a>
-                        </div>
                     </form>
+                <a href="{{ path('fos_user_registration_register') }}" role="button" class="btn btn-block btn-warning">Créer un compte</a>
             </div>
             </div>
         </div>
